--- a/Plantilla/scss/estilos.css
+++ b/Plantilla/scss/estilos.css
@@ -261,33 +261,12 @@ body {
 */
 .Cuadro_lateral_izquierdo {
   background: #7F0912;
-  color: #fff;
-  text-align: center; }
+  color: #fff; }
 
 .Cuadro_lateral_izquierdo .Icon_agenda a {
   color: #fff;
   font-size: 12rem;
-  margin: 0 1rem; }
-
-.Cuadro_lateral_izquierdo .Icon_agenda {
+  margin: 0 1rem;
   text-align: center; }
-
-.Cuadro_lateral_izquierdo .consulta {
-  background-color: transparent;
-  color: #009500;
-  font-size: 3rem;
-  border: transparent; }
-
-.Cuadro_lateral_izquierdo .consulta {
-  background-color: transparent;
-  color: #009500;
-  font-size: 3rem;
-  border: transparent; }
-
-.Cuadro_lateral_izquierdo .Agendar {
-  background-color: transparent;
-  color: #009500;
-  font-size: 3rem;
-  border: transparent; }
 
 /*# sourceMappingURL=estilos.css.map */
