--- a/Plantilla/scss/estilos.scss
+++ b/Plantilla/scss/estilos.scss
@@ -226,35 +226,24 @@ body {
 ------------------------------------ Estilo de agendaa ---------------------------------------------------------
 */
 .Cuadro_lateral_izquierdo {
+    
     background: $principal;
     color: #fff;
     text-align: center;
+    padding: 15px;
 }
 
 .Cuadro_lateral_izquierdo .Icon_agenda a {
     color: #fff;
     font-size: 12rem;
     margin: 0 1rem;
-   
 }
 .Cuadro_lateral_izquierdo .Icon_agenda  {
     text-align: center;
 }
 .Cuadro_lateral_izquierdo  .consulta  {
-   background-color: transparent;
-   color: $secundario;
-   font-size: 3rem;
-   border: transparent;
+   background: $secundario;
+   color: #fff;
+   border: $secundario;
+   font-size: 2rem;
 }
-.Cuadro_lateral_izquierdo  .consulta  {
-    background-color: transparent;
-    color: $secundario;
-    font-size: 3rem;
-    border: transparent;
- }
-.Cuadro_lateral_izquierdo  .Agendar  {
-    background-color: transparent;
-    color: $secundario;
-    font-size: 3rem;
-    border: transparent;
- }
