--- a/yaf-inmobiliaria-angular/src/app/menu-inico/menu-inico.component.html
+++ b/yaf-inmobiliaria-angular/src/app/menu-inico/menu-inico.component.html
@@ -18,12 +18,12 @@
                     </form>
                     <nav id="menu_principal" class="collapse">
                         <ul>
-                            <li class="activo"><a href="index.html">Inicio</a></li>
+                            <li class="activo"><a routerLink="">Inicio</a></li>
                             <li><a routerLink="citas">Citas</a></li>
-                            <li><a href="servicios.html">servicios</a></li>
-                            <li><a href="a.html">inmuebles</a></li>
-                            <li><a href="#who">contacto</a></li>
-                            <li><a href="a.html">Login</a></li>
+                            <li><a >servicios</a></li>
+                            <li><a routerLink="inmuebles">inmuebles</a></li>
+                            <li><a >contacto</a></li>
+                            <li><a >Login</a></li>
                         </ul>
                     </nav>
                 </div>
