se agrego citas,agenetes y ayuda al angular

--- a/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
+++ b/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
@@ -1,3 +1,262 @@
-<p>
-  agente works!
-</p>
+<div class="cuerpo" id="page-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <span class="d-none d-lg-block">
+          <a href="#">
+              <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+          </a>
+        </span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">Bienvenidos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#crear">Crear</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Modificar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Listar</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Busca Personalizado</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container-fluid p-0">
+      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+        <div class="w-100">
+          <h1 class="mb-0">Pestaña dedicada para
+            <span class="text-primary"> Agentes </span>
+          </h1>
+          <div class="subheading mb-5">Nuestros agentes son los encargados de mostrar nuestros inmuebles·
+          </div>
+          <p class="lead mb-5">Busca,creo o modifica un agente.</p>
+        </div>
+      </section>
+      <hr class="m-0">
+      <!--Crear-->
+      <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="crear">
+        <div class="w-100">
+          <h2 class="mb-5">Crear</h2>
+          <form class="form-inline">
+            <div class="container">
+              <div class="input-group mb-2 mr-sm-2">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">
+                      <i class="fas fa-signature"></i>
+                  </div>
+                </div>
+                <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Primer Nombre">
+              </div>
+            
+                <div class="input-group mb-2 mr-sm-2">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <i class="fas fa-signature"></i>
+                    </div>
+                  </div>
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Segundo nombre">
+                </div>
+              </div>
+              <div class="container">
+                  <div class="input-group mb-2 mr-sm-2">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <i class="fas fa-rainbow"></i>
+                      </div>
+                    </div>
+                    <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Primer Apellido">
+                  </div>
+
+
+                  <div class="sn input-group mb-2 mr-sm-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">
+                          <i class="fas fa-rainbow"></i>
+                        </div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Segundo Apellido">
+                  </div>
+                </div>
+                <div class="container">
+                    <div class="input-group mb-2 mr-sm-2">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text">
+                            <i class="far fa-copyright"></i>
+                          </div>
+                        </div>
+                        <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="# Identificación">
+                    </div>
+
+                    <div class="dropdown show">
+                      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Tipo
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="#">Cedula</a>
+                        <a class="dropdown-item" href="#">Pasaporte</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container">    
+                    <div class="fecha">
+                      <label for="">Fecha de Nacimiento</label>
+                      <input type="date" name="" id="">
+                    </div>
+
+                    <div class="input-group mb-2 mr-sm-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">
+                          <i class="fas fa-mobile"></i>
+                        </div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Numero de Celular">
+                    </div>
+                  </div> 
+                  <div class="container">
+                    <div class="input-group mb-2 mr-sm-2">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text">
+                            <i class="fas fa-mobile"></i>
+                          </div>
+                        </div>
+                        <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Correo">
+                    </div>
+
+                    <div class="input-group mb-2 mr-sm-2">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text">
+                            <i class="fas fa-mobile"></i>
+                          </div>
+                        </div>
+                        <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Password">
+                    </div>
+                        
+                  </div>
+
+              <button type="submit" class="btn btn-primary mb-2">Crear</button>
+            </form>
+       
+        </div>
+      </section>
+      <hr class="m-0">
+  <!--Modificar-->
+      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+        <div class="w-100">
+          <h2 class="mb-5">Modificar</h2>
+        </div>
+      </section>
+  
+      <hr class="m-0">
+  
+      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+        <div class="w-100">
+          <h2 class="mb-5">Buscar</h2>
+          <div class="input-group mb-2 mr-sm-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                    <i class="fas fa-signature"></i>
+                </div>
+              </div>
+              <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Id Cita">
+            </div>
+            <button type="button" class="btn btn-primary">Buscar</button>
+            <div class="table-container">
+              <table class="table-rwd">
+                <tr>
+                
+                  <th>id</th>
+                  <th>Cliente</th>
+                  <th>Agente</th>
+                  <th>Inmueble</th>
+                  <th>Periodo 4</th>
+                  <th>fecha</th>
+                  <th>hora</th>
+                  <th>registro</th>
+                  
+                </tr>
+                <tr>
+                
+                  <td>100</td>
+                  <td>200</td>
+                  <td>300</td>
+                  <td>400</td>
+                  <td>500</td>
+                  <td>600</td>
+                  <td>700</td>
+                  <td>700</td>
+                </tr>
+                <tr>
+                 
+                  <td>200</td>
+                  <td>400</td>
+                  <td>600</td>
+                  <td>800</td>
+                  <td>1000</td>
+                  <td>1200</td>
+                  <td>1400</td>
+                  <td>700</td>
+                </tr>           
+              </table>
+            </div>
+        </div>
+      </section>
+  
+      <hr class="m-0">
+  
+      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="listar">
+        <div class="w-100">
+          <h2 class="mb-5">Listar</h2>
+          <button type="button" class="btn btn-primary">Buscar</button>
+        <div class="table-container">
+          <table class="table-rwd">
+            <tr>
+            
+              <th>id</th>
+              <th>Cliente</th>
+              <th>Agente</th>
+              <th>Inmueble</th>
+              <th>Periodo 4</th>
+              <th>fecha</th>
+              <th>hora</th>
+              <th>registro</th>
+              
+            </tr>
+            <tr>
+            
+              <td>100</td>
+              <td>200</td>
+              <td>300</td>
+              <td>400</td>
+              <td>500</td>
+              <td>600</td>
+              <td>700</td>
+              <td>700</td>
+            </tr>
+            <tr>
+             
+              <td>200</td>
+              <td>400</td>
+              <td>600</td>
+              <td>800</td>
+              <td>1000</td>
+              <td>1200</td>
+              <td>1400</td>
+              <td>700</td>
+            </tr>           
+          </table>
+        </div>
+        </div>
+      </section>
+    </div>
+  </div>
+  
+  
