--- a/yaf-inmobiliaria-angular/src/app/menu-inico/menu-inico.component.html
+++ b/yaf-inmobiliaria-angular/src/app/menu-inico/menu-inico.component.html
@@ -20,10 +20,10 @@
                         <ul>
                             <li class="activo"><a href="index.html">Inicio</a></li>
                             <li><a routerLink="citas">Citas</a></li>
-                            <li><a href="servicios.html">servicios</a></li>
+                            <li><a routerLink="agente">Agentes</a></li>
                             <li><a href="a.html">inmuebles</a></li>
                             <li><a href="#who">contacto</a></li>
-                            <li><a href="a.html">Login</a></li>
+                            <li><a routerLink="ayuda">Ayuda</a></li>
                         </ul>
                     </nav>
                 </div>
