--- a/yaf-inmobiliaria-angular/src/app/citas/citas.component.css
+++ b/yaf-inmobiliaria-angular/src/app/citas/citas.component.css
@@ -186,4 +186,91 @@
   a:hover, a:focus, a:active {
     color: #7F0912;
   }
+  /*Crear*/
+
+  @media (max-width:767px){
+    .dropdown {
+      margin-top: 10px;
+    }
+    .tiempo{
+      margin-top: 10px;
+    }
+    .btn  {
+      margin-top: 20px;
+    }
+    .table  {
+      height: 230px;
+      overflow-y: auto;
+      width: 100%;
+      margin-left: 0px;
+    }
+    .holah{
+      width: 600px;
+    }
+  }
+  
+  /*tabla*/
+  * {
+    box-sizing: border-box; }
+  
+  body {
+    margin: 0;
+    font-family: sans-serif;
+    color: #333; }
+  
+  h1 {
+    text-align: center;
+    color: #333; }
+  
+  .table-rwd {
+    font-size: .85em;
+    border: 1px solid rgba(181, 213, 144, 0.5);
+    color: #666;
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto; }
+    .table-rwd td, .table-rwd th {
+      padding: .8em;
+      border-bottom: 1px solid rgba(181, 213, 144, 0.5); }
+    .table-rwd th {
+      background: #1A8CFF;
+      color: #fff;
+      font-weight: normal;
+      text-align: right; }
+    .table-rwd td {
+      text-align: right; }
+      .table-rwd td:before {
+        content: "$ ";
+        color: #1A8CFF; }
+      .table-rwd td:after {
+        content: ".00"; }
+  
+    .table-rwd tr:hover {
+      background: rgba(181, 213, 144, 0.2); }
+    .table-rwd tr td:nth-child(2n) {
+      background: rgba(181, 213, 144, 0.2); }
+  
+  .table-container {
+    overflow-x: auto; }
+  
+  .table-rwd {
+    min-width: 900px; }
+  
+    
+    @media (min-width:1200px){
+      #crear  {
+        display: inline-flex;
+      }
+      .card a{
+        margin-top: 10px;
+        display: inline-block;
+        font-size: 1rem;
+      }
+      .card,
+   .m  {
+      width: 100vh;
+     margin-left: 300px;
+  }
+  }
+
   
