--- a/yaf-inmobiliaria-angular/src/app/citas/citas.component.html
+++ b/yaf-inmobiliaria-angular/src/app/citas/citas.component.html
@@ -13,197 +13,270 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">Crear</a>
+          <a class="nav-link js-scroll-trigger" href="#about">Bienvenidos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Modificar</a>
+          <a class="nav-link js-scroll-trigger" href="#crear">Crear</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Listar</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Modificar</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Listar</a>
+        </li>
+          <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Busca Personalizado</a>
         </li>
       </ul>
     </div>
   </nav>
-
   <div class="container-fluid p-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Piensa
+          <span class="text-primary"> en ti </span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">Cada dia mejorando mas, para que tu siempre estes comodo·
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-        <div class="social-icons">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </div>
+        <p class="lead mb-5">En este espacio podras agendar una cita,modificar o hacer busquedas para que puedas organizar mejor tu tiempo, mas secar de ti.</p>
       </div>
     </section>
-
     <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <!--Crear-->
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="crear">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-
+        <h2 class="mb-5">Crear</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
-          </div>
+            <div class="card">
+            <img class="card-img-top" src="../../assets/image/fondoCasa.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="container " id="crear"> 
+                  <div class="resume-content">
+                    <div class="dropdown show">
+                      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Cliente
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="#">Juan</a>
+                        <a class="dropdown-item" href="#">Pedro</a>
+                        <a class="dropdown-item" href="#">Samuel</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Agente
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">Juan</a>
+                      <a class="dropdown-item" href="#">Pedro</a>
+                      <a class="dropdown-item" href="#">Samuel</a>
+                    </div>
+                  </div>
+                  <div class="dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Inmueble
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">Juan</a>
+                      <a class="dropdown-item" href="#">Pedro</a>
+                      <a class="dropdown-item" href="#">Samuel</a>
+                    </div>
+                  </div>
+                </div>
+                  <div class="container" id ="crear2">
+                    <label class="tiempo " for="#">Fecha En la que desea la cita</label>
+                    <form action="#" >
+                      <input class="fecha" type="month">
+                    </form>
+                    <label class="tiempo " for="#">Hora  En la que desea la cita</label>
+                    <form action="#">
+                      <input type="time" id="appt" name="appt"
+                      min="9:00" max="18:00" required>
+                    </form>
+                   
+                  </div>
+              <a href="#!" class="btn btn-primary bcrear">Crear</a>
+            </div>
+          </div>  
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
-
-      </div>
-
+      </div>      
     </section>
-
     <hr class="m-0">
-
+<!--Modificar-->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
-
+        <h2 class="mb-5">Modificar</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
-          </div>
-        </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+              <div class="card m">
+                  <img class="card-img-top" src="../../assets/image/presentacion.svg" alt="Card image cap">
+                  <div class="card-body">
+                   
+            <div class="container">
+                <div class="input-group mb-2 mr-sm-2">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                          <i class="fas fa-signature"></i>
+                      </div>
+                    </div>
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="ID Cita">
+                </div>
+              </div>
+              <div class="container">
+              <div class="dropdown show">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Cliente
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Juan</a>
+                  <a class="dropdown-item" href="#">Pedro</a>
+                  <a class="dropdown-item" href="#">Samuel</a>
+                </div>
+              </div>
+            </div>
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Agente
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Juan</a>
+                <a class="dropdown-item" href="#">Pedro</a>
+                <a class="dropdown-item" href="#">Samuel</a>
+              </div>
+            </div>
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Inmueble
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Juan</a>
+                <a class="dropdown-item" href="#">Pedro</a>
+                <a class="dropdown-item" href="#">Samuel</a>
+              </div>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+          <div class="container">
+            <label class="tiempo " for="#">Fecha En la que desea la cita</label>
+            <form action="#" >
+              <input class="fecha" type="month">
+            </form>
+             <label class="tiempo " for="#">Hora  En la que desea la cita</label>
+            <form action="#">
+            <input type="time" id="appt" name="appt"
+              min="9:00" max="18:00" required>
+            </form>
           </div>
-        </div>
+                   
+                    <a href="#!" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
 
+      </div>
+      </div>
+    </section>
+    <hr class="m-0">
+<!--Buscar-->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+      <div class="w-100">
+        <h2 class="mb-5">Buscar</h2>
+        <div class="input-group mb-2 mr-sm-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text">
+                  <i class="fas fa-signature"></i>
+              </div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Id Cita">
+          </div>
+          <button type="button" class="btn btn-primary">Buscar</button>
+          <div class="table-container">
+            <table class="table-rwd">
+              <tr>
+              
+                <th>id</th>
+                <th>Cliente</th>
+                <th>Agente</th>
+                <th>Inmueble</th>
+                <th>Periodo 4</th>
+                <th>fecha</th>
+                <th>hora</th>
+                <th>registro</th>
+                
+              </tr>
+              <tr>
+              
+                <td>100</td>
+                <td>200</td>
+                <td>300</td>
+                <td>400</td>
+                <td>500</td>
+                <td>600</td>
+                <td>700</td>
+                <td>700</td>
+              </tr>
+              <tr>
+               
+                <td>200</td>
+                <td>400</td>
+                <td>600</td>
+                <td>800</td>
+                <td>1000</td>
+                <td>1200</td>
+                <td>1400</td>
+                <td>700</td>
+              </tr>           
+            </table>
+          </div>
       </div>
     </section>
 
     <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+<!--Listar-->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="listar">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+        <h2 class="mb-5">Listar</h2>
+        <button type="button" class="btn btn-primary">Buscar</button>
+        <div class="table-container">
+          <table class="table-rwd">
+            <tr>
+            
+              <th>id</th>
+              <th>Cliente</th>
+              <th>Agente</th>
+              <th>Inmueble</th>
+              <th>Periodo 4</th>
+              <th>fecha</th>
+              <th>hora</th>
+              <th>registro</th>
+              
+            </tr>
+            <tr>
+            
+              <td>100</td>
+              <td>200</td>
+              <td>300</td>
+              <td>400</td>
+              <td>500</td>
+              <td>600</td>
+              <td>700</td>
+              <td>700</td>
+            </tr>
+            <tr>
+             
+              <td>200</td>
+              <td>400</td>
+              <td>600</td>
+              <td>800</td>
+              <td>1000</td>
+              <td>1200</td>
+              <td>1400</td>
+              <td>700</td>
+            </tr>           
+          </table>
+        </div>
       </div>
     </section>
   </div>
 </div>
+
