Se arreglo los enlaces de la barra de izquierda

--- a/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
+++ b/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
@@ -13,19 +13,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Bienvenidos</a>
+            <a class="nav-link js-scroll-trigger" href="agente#about">Bienvenidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#crear">Crear</a>
+            <a class="nav-link js-scroll-trigger" href="agente#crear">Crear</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Modificar</a>
+            <a class="nav-link js-scroll-trigger" href="agente#education">Modificar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Listar</a>
+            <a class="nav-link js-scroll-trigger" href="agente#skills">Busca Personalizado</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Busca Personalizado</a>
+            <a class="nav-link js-scroll-trigger" href="agente#listar">listar</a>
           </li>
         </ul>
       </div>
