--- a/yaf-inmobiliaria-angular/src/app/citas/citas.component.html
+++ b/yaf-inmobiliaria-angular/src/app/citas/citas.component.html
@@ -13,19 +13,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">Bienvenidos</a>
+          <a class="nav-link js-scroll-trigger" href="citas#about">Bienvenidos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#crear">Crear</a>
+          <a class="nav-link js-scroll-trigger" href="citas#crear">Crear</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Modificar</a>
+          <a class="nav-link js-scroll-trigger" href="citas#education">Modificar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Listar</a>
+          <a class="nav-link js-scroll-trigger" href="citas#skills">Listar</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Busca Personalizado</a>
+          <a class="nav-link js-scroll-trigger" href="citas#listar">Busca Personalizado</a>
         </li>
       </ul>
     </div>
