union rama alejandro implementacion clientes

--- a/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
@@ -6,12 +6,11 @@
           <a href="login.html " class="btn-primary btn-lg">Registrate</a>
       </div>
   </div>
-  <div class="div-flecha_bajar" >
+  <!-- <div class="div-flecha_bajar" >
       <a href="presentacion">
-          <i class="fa fa-caret-down" aria-hidden="true"></i>
-          
+          <i class="fa fa-caret-down" aria-hidden="true"></i>  
       </a>
-  </div>
+  </div> -->
 </section>
 <section class="presentacion " id="presentacion">
   <div class="container">
