--- a/yaf-inmobiliaria-angular/src/app/cliente/cliente.component.html
+++ b/yaf-inmobiliaria-angular/src/app/cliente/cliente.component.html
@@ -13,16 +13,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="clientes#Crear">Crear</a>
+          <a class="nav-link js-scroll-trigger" href="cliente#Crear">Crear</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="clientes#modificar">Modificar</a>
+          <a class="nav-link js-scroll-trigger" href="cliente#modificar">Modificar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="clientes#listar">Listar</a>
+          <a class="nav-link js-scroll-trigger" href="cliente#listar">Listar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="clientes#buscar">Buscar</a>
+          <a class="nav-link js-scroll-trigger" href="cliente#buscar">Buscar</a>
         </li>
       </ul>
     </div>
