--- a/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
@@ -89,7 +89,7 @@
               <div class="card-header cardHeader">
                 <h5 class="card-title Title">Apartamento Silicon Valley</h5>
               </div>
-              <img src="./Imagenes/01.jpg" class="card-img-top" alt="...">
+              <!--<img src="./Imagenes/01.jpg" class="card-img-top" alt="..."> -->
               <div class="card-body">
                 <div>
                   <span class="badge badge-pill badge-info"><i class="fas fa-map-marked-alt"></i> 251 Brandon
